fix aimodels
